kubext/manual/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  labels:
    app: myservice
    system: c3
    domain: devoops.local
spec:
  selector:
    app: myservice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
