kubext/manual/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: c3
  namespace: default
spec:
  rules:
  - host: myservice.devoops.local
    http:
      paths:
      - path: /
        backend:
          serviceName: myservice
          servicePort: 80
